colours working on hover strip

--- a/settings.html
+++ b/settings.html
@@ -190,7 +190,7 @@
 <body>
     <div id="settings-titlebar">
         <div id="settings-title-left">
-            <span>⚙</span>
+            <span>&#9881;</span>
             <span>TTT Timer - Settings</span>
         </div>
         <button id="settings-close-btn" title="Close">X</button>
@@ -230,14 +230,14 @@
             </select>
         </div>
         <div class="settings-field">
-            <label class="settings-label" for="transparency-slider">Transparency</label>
+            <label class="settings-label" for="transparency-slider">Background Opacity</label>
             <div class="slider-container">
                 <div class="slider-value-display">
-                    <span>More Transparent (20%)</span>
+                    <span>More Transparent (5%)</span>
                     <span class="slider-value" id="transparency-value">100%</span>
                     <span>Opaque (100%)</span>
                 </div>
-                <input type="range" id="transparency-slider" min="20" max="100" value="100" step="1">
+                <input type="range" id="transparency-slider" min="5" max="100" value="100" step="1">
             </div>
         </div>
         <button id="settings-save-btn">Save Settings</button>
